# CMakeExample

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
divide/: CMakeLists.txt
divide/src/: divide.cpp
include/: mytools.hpp
minus/: CMakeLists.txt
minus/include/: minus.hpp
minus/src/: CMakeLists.txt  minus.cpp
multiple/: CMakeLists.txt
multiple/src/: CMakeLists.txt  multiple.cpp
plus/: CMakeLists.txt
plus/include/: plus.hpp
plus/src/: CMakeLists.txt  plus.cpp
src/: CMakeLists.txt  main.cpp  mytools.cpp
